--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -398,7 +398,7 @@
     <div class="container">
         <!-- The rest of your HTML content goes here -->
         <div class="header">
-            <div class="profile-pic" style="background-image: url('images/Seraspi.jpg');"></div>
+            <div class="profile-pic" style="background-image: url('images/Seraspi.png');"></div>
         </div>
 
         <!-- Placeholder for your name -->
