--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -403,7 +403,7 @@
 
         <!-- Placeholder for your name -->
         <h1>Nicole Ann I. Seraspi</h1>
-        <p class="description">I am a 3rd year BSIT student.</p>
+        <p class="description">I am a 3rd year BSIT student at West Visayas State University.</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
